Updated publish.yml to always deploy

--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -19,6 +19,7 @@
 
     <PropertyGroup>
         <MinVerTagPrefix>v</MinVerTagPrefix>
+        <MinVerMinimumMajorMinor>1.1</MinVerMinimumMajorMinor>
     </PropertyGroup>
 
     <PropertyGroup>
