--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@
 
 name: publish
 on:
-  workflow_dispatch: # Allow running the workflow manually from the GitHub UI
   push:
+  workflow_dispatch: # Allow running the workflow manually from the GitHub UI
     branches:
       - 'master'     # Run the workflow when pushing to the master branch
   pull_request:
@@ -83,6 +83,7 @@ jobs:
     # https://docs.github.com/en/repositories/releasing-projects-on-github/managing-releases-in-a-repository
     # You can update this logic if you want to manage releases differently
     # if: github.event_name == 'release'
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
