--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -33,7 +33,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="Icon.jpg" Pack="true" PackagePath=""/>
+        <None Include="Icon.jpg" Pack="true" PackagePath="" />
         <None Include="..\README.md" Pack="true" PackagePath="" />
     </ItemGroup>
 
@@ -42,6 +42,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="ISO3166" Version="1.0.4" />
 		<PackageReference Include="libphonenumber-csharp" Version="8.13.8" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="MinVer" Version="4.3.0">
