--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -44,6 +44,7 @@
 		</PackageReference>
 		<PackageReference Include="ISO3166" Version="1.0.4" />
 		<PackageReference Include="libphonenumber-csharp" Version="8.13.8" />
+		<PackageReference Include="Loyc.Math" Version="30.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="MinVer" Version="4.3.0">
 			<PrivateAssets>all</PrivateAssets>
