--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -42,6 +42,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="FluentValidation" Version="11.5.1" />
 		<PackageReference Include="ISO3166" Version="1.0.4" />
 		<PackageReference Include="libphonenumber-csharp" Version="8.13.8" />
 		<PackageReference Include="Loyc.Math" Version="30.1.0" />
