--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -83,7 +83,8 @@ jobs:
     # https://docs.github.com/en/repositories/releasing-projects-on-github/managing-releases-in-a-repository
     # You can update this logic if you want to manage releases differently
     # if: github.event_name == 'release'
-    if: startsWith(github.ref, 'refs/tags/v')
+    # if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/') && github.ref =~ /refs\/tags\/v\d+\.\d+\.\d+$/
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
