--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,15 +3,17 @@
 name: publish
 on:
   push:
-  workflow_dispatch: # Allow running the workflow manually from the GitHub UI
-    branches:
-      - 'master'     # Run the workflow when pushing to the master branch
-  pull_request:
-    branches:
-      - '*'          # Run the workflow for all pull requests
-  release:
-    types:
-      - published    # Run the workflow when a new GitHub release is published
+    tags:
+    - 'v*'  
+  # workflow_dispatch: # Allow running the workflow manually from the GitHub UI
+  #  branches:
+  #    - 'master'     # Run the workflow when pushing to the master branch
+  #pull_request:
+  #  branches:
+  #    - '*'          # Run the workflow for all pull requests
+  #release:
+  #  types:
+  #    - published    # Run the workflow when a new GitHub release is published
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -84,7 +86,7 @@ jobs:
     # You can update this logic if you want to manage releases differently
     # if: github.event_name == 'release'
     # if: startsWith(github.ref, 'refs/tags/v')
-    if: startsWith(github.ref, 'refs/tags/') && github.ref =~ /refs\/tags\/v\d+\.\d+\.\d+$/
+    # if: startsWith(github.ref, 'refs/tags/') && github.ref = /refs/tags/v\d+\.\d+\.\d+$/
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
