--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,17 +3,15 @@
 name: publish
 on:
   push:
-    tags:
-    - 'v*'  
-  # workflow_dispatch: # Allow running the workflow manually from the GitHub UI
-  #  branches:
-  #    - 'master'     # Run the workflow when pushing to the master branch
-  #pull_request:
-  #  branches:
-  #    - '*'          # Run the workflow for all pull requests
-  #release:
-  #  types:
-  #    - published    # Run the workflow when a new GitHub release is published
+  workflow_dispatch: # Allow running the workflow manually from the GitHub UI
+    branches:
+      - 'master'     # Run the workflow when pushing to the master branch
+  pull_request:
+    branches:
+      - '*'          # Run the workflow for all pull requests
+  release:
+    types:
+      - published    # Run the workflow when a new GitHub release is published
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -81,12 +79,6 @@ jobs:
       run: dotnet test --configuration Release
 
   deploy:
-    # Publish only when creating a GitHub Release
-    # https://docs.github.com/en/repositories/releasing-projects-on-github/managing-releases-in-a-repository
-    # You can update this logic if you want to manage releases differently
-    # if: github.event_name == 'release'
-    # if: startsWith(github.ref, 'refs/tags/v')
-    # if: startsWith(github.ref, 'refs/tags/') && github.ref = /refs/tags/v\d+\.\d+\.\d+$/
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
