--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -33,9 +33,10 @@
 		<PackageReference Include="libphonenumber-csharp" Version="8.13.11" />
 		<PackageReference Include="Loyc.Math" Version="30.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
 		<PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
-		<PackageReference Include="Vogen" Version="3.0.16" />
+		<PackageReference Include="Vogen" Version="3.0.19" />
 	</ItemGroup>
 
 </Project>
