--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -27,13 +27,13 @@
     </ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="FluentValidation" Version="11.8.1" />
+		<PackageReference Include="ErrorOr" Version="1.9.0" />
+		<PackageReference Include="FluentValidation" Version="11.9.0" />
 		<PackageReference Include="ISO3166" Version="1.0.4" />
-		<PackageReference Include="libphonenumber-csharp" Version="8.13.26" />
+		<PackageReference Include="libphonenumber-csharp" Version="8.13.30" />
 		<PackageReference Include="Loyc.Math" Version="30.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-		<PackageReference Include="OneOf" Version="3.0.263" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
 		<PackageReference Include="Serilog.Sinks.Seq" Version="6.0.0" />
 	</ItemGroup>
