Lots of work on TagArg and related code

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\Fundamentals\Fundamentals.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Results\" />
+  </ItemGroup>
+
 </Project>
