--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -27,15 +27,15 @@
     </ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="FluentValidation" Version="11.9.0" />
+		<PackageReference Include="FluentValidation" Version="11.9.2" />
 		<PackageReference Include="ISO3166" Version="1.0.4" />
-		<PackageReference Include="libphonenumber-csharp" Version="8.13.30" />
-		<PackageReference Include="Loyc.Math" Version="30.1.0" />
+		<PackageReference Include="libphonenumber-csharp" Version="8.13.39" />
+		<PackageReference Include="Loyc.Math" Version="30.1.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
-		<PackageReference Include="Serilog.Sinks.Seq" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
 	</ItemGroup>
 
     <ItemGroup>
@@ -43,6 +43,10 @@
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Collections\Metadata\" />
     </ItemGroup>
 
 </Project>
