--- a/LoggingDemo/LoggingDemo.csproj
+++ b/LoggingDemo/LoggingDemo.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
